changed work experience companies

--- a/index.html
+++ b/index.html
@@ -184,22 +184,22 @@
                 </div>
                 <div class="timeline" data-aos="fade-down" data-aos-delay="300">
                     <ul>
-                        <li class="date" data-date="2011 - Present">
-                            <h1>Google</h1>
+                        <li class="date" data-date="2018 - Present">
+                            <h1>KIC InnoEnergy</h1>
                             <p>
                                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
                                 Explicabo sit aut officiis, tenetur minus enim? In voluptatum error
                             </p>
                         </li>
-                        <li class="date" data-date="2008 - 2011">
-                            <h1>Facebook</h1>
+                        <li class="date" data-date="2016 - 2018">
+                            <h1>New Generation Consulting</h1>
                             <p>
                                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
                                 Explicabo sit aut officiis, tenetur minus enim? In voluptatum error
                             </p>
                         </li>
-                        <li class="date" data-date="2002 - 2007">
-                            <h1>Microsoft</h1>
+                        <li class="date" data-date="2015 - 2016">
+                            <h1>United Nations</h1>
                             <p>
                                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
                                 Explicabo sit aut officiis, tenetur minus enim? In voluptatum error
